fixed the issue with RTL layout and label alignment

--- a/TabLayout/TabGroup.module.less
+++ b/TabLayout/TabGroup.module.less
@@ -37,7 +37,11 @@
 		}
 
 		.client {
-			text-align: start;
+			.sand-ltr-rtl-rules({
+				text-align: start;
+			}, {
+				text-align: end;
+			});
 		}
 	}
 
