--- a/TabLayout/TabLayout.module.less
+++ b/TabLayout/TabLayout.module.less
@@ -57,6 +57,10 @@
 
 			.content {
 				transform: translateX(var(--tablayout-expand-collapse-diff));
+
+				:global(.enact-locale-right-to-left) & {
+					transform: translateX(calc(var(--tablayout-expand-collapse-diff) * -1));
+				}
 			}
 		}
 
@@ -65,6 +69,10 @@
 				opacity: 0;
 				transform: translateX(calc(var(--tablayout-expand-collapse-diff) * -1));
 				pointer-events: none;
+
+				:global(.enact-locale-right-to-left) & {
+					transform: translateX(var(--tablayout-expand-collapse-diff));
+				}
 			}
 		}
 	}
